--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\62818\\Desktop\\Semester 6\\Riset\\django\\Env\\Scripts\\python.exe"
+    "python.pythonPath": "d:\\Kuliah\\ITS\\Research\\django\\django-1_11\\Scripts\\python.exe"
 }
